--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://jessekorff-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.22ni7j7uu4gm.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer.22q5t6ocytul.us-south.codeengine.appdomain.cloud/
