add Dockerfile, deployment.yaml, entrypoint.sh for deployment on Kubernetes

--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,4 +1,4 @@
 # backend_url=https://jessekorff-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
 backend_url=https://jessekorff-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
 # backend_url=http://localhost:3030
-sentiment_analyzer_url=https://sentianalyzer.22xbtyxoj70v.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer.22ymjitpl2oe.us-south.codeengine.appdomain.cloud/
